ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookbuyer
  namespace: bookbuyer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /bookbuyer
        pathType: Prefix
        backend:
          service:
            name: bookbuyer
            port:
              number: 14001
